--- a/src/components/products/ProductItemDetails/index.css
+++ b/src/components/products/ProductItemDetails/index.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     margin-top: 32px;
+    margin-bottom: 25px;
 }
 
 @media screen and (min-width: 768px) {
